--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import "reset.scss";
 .reset {
   width: 150px;
   height: 50px;
@@ -50,4 +51,11 @@ background-color: #a800ff;
 }
 .black {
   background-color: black;
+}
+.color-picker {
+	display: block;
+	width: 804px;
+	height: 100px;
+	margin: 0 auto;
+	border: none;
 }
